# bewise-quiz-api-test

./: .env  .gitignore  Readme.md  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schema.py  setup.cfg
alembic/: env.py
alembic/versions/: a2a1e067b627_new_migration.py
